syntax = "proto3";

package aladinfun.proto;

message PktOpt {
    // 1.0.1.142 前三个为应用版本号，最后一个为热更新版本号，每个版本号占一个字节
    uint32 Version = 1;
    uint64 Mtkey   = 2;
    uint64 Skey    = 3;
    uint32 Seq     = 4;
    uint64 Time    = 5; // ms
    string UID     = 6;
    string Device  = 7; // ios | android | h5
    string Channel = 8; // googleplay | appstore | ...
    string Lang    = 9; // zh_cn | ...
}

message PktInfo {
    uint32 Cmd = 1;
    uint32 Len = 2;
}

message PktHead {
    PktOpt Opt               = 1;
    repeated PktInfo PktInfo = 2;
}

message Packet {
    PktHead Head = 1;
    bytes   Body = 2;
}